syntax = "proto3";
package coreum.asset.nft.v1;

import "gogoproto/gogo.proto";

import "coreum/asset/nft/v1/nft.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/nft/types";

// EventClassIssued is emitted on MsgIssueClass.
message EventClassIssued {
  string id = 1 [(gogoproto.customname) = "ID"];
  string issuer = 2;
  string symbol = 3;
  string name = 4;
  string description = 5;
  string uri = 6 [(gogoproto.customname) = "URI"];
  string uri_hash = 7 [(gogoproto.customname) = "URIHash"];
  repeated ClassFeature features = 8;
}
